# cmake-prj-template

./: .gitignore  CMakeLists.txt  README.md
include/: source.h
scripts/: build.sh  clean_prj.sh  compute_cpp_lines.sh
src/: souce.cpp
test/: main.cpp
